--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "daily-report",
+  "name": "cm-daily-report",
   "displayName": "Daily report",
+  "publisher": "DailyReport",
   "description": "AI generate daily report with your commit message",
-  "icon": "src/assets/dialy-report-logo.png",
+  "icon": "assets/dialy-report-logo.png",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.95.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chaninlaw/daily-report.git"
+  },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:daily-report.generateReport",
+    "onStartupFinished"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -92,11 +100,8 @@
     "eslint": "^9.13.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
+    "simple-git": "^3.27.0",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387",
-  "dependencies": {
-    "openai": "^4.73.0",
-    "simple-git": "^3.27.0"
-  }
+  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
 }
